GNOME Bugzilla – Bug 727703
session scripts run for the "gdm" user as well
Last modified: 2014-04-07 16:01:11 UTC
Hi. It seems that this commit: 83b48a305e71637181975fc7ec479a71079b6fbc had the side effect of the GDM process to run the PreSession/PostSession scripts for the "gdm" user as well (before, it would only run for users login in). I don't know if that was intended, but I use these scripts intensively in my gnome office setups and GDM 3.12.0 broke for me because of this change. It was easy enough to fix (I just added a conditional in the scripts to not run anything if $USER is the user running GDM), but I just wanted to report it just in case... Feel free to close this bug in case that is now expected behavior. Thank you.
CC'ing Jasper who wrote https://git.gnome.org/browse/gdm/commit/?id=83b48a305e71637181975fc7ec479a71079b6fbc
This was unintended. We were actually planning on getting rid of these session scripts entirely next cycle, though. What you use these scripts for?
(In reply to comment #2) > This was unintended. We were actually planning on getting rid of these session > scripts entirely next cycle, though. What you use these scripts for? Hi Jasper. Mostly to preconfigure several of user settings (gsettings, gconf, evolution accounts, starting some interactive zenity scripts...). In addition to that I also use them on OpenBSD installations to change the drm(4) device ownership (which is 0600 ownbed by 0:0 by default here). I can locally patch gdm to handle the drm(4) stuff where the workstations run OpenBSD, so that's not a big deal. For the rest, I suppose I can use some autostart xdg script or something?
Default gsettings should be handled through dconf profiles. For the rest, I'd use XDG autostart, yeah.
(In reply to comment #4) > Default gsettings should be handled through dconf profiles. How do you handle $USER in default dconf profiles? That is the reason I started using GDM scripts because I am auto-setting up evolution sources (calendar, email...) and that requires knowing the user name. Anyway, that part could also be moved to XDG autostart as well I suppose.
Created attachment 273715 [details] [review] worker: don't run shell scripts for program sessions GDM uses a worker to manage PAM for user sessions and greeter sessions. For the latter case we shouldn't run the various Pre/Post scripts, but commit Sb48a305e71637181975fc7ec479a71079b6fbc broke that. This commit changes the code to prevent those scripts from getting run again.
I've pushed this patch for now, so we don't keep the behavioral change in 3.12 series. Attachment 273715 [details] pushed as e120675 - worker: don't run shell scripts for program sessions
(In reply to comment #7) > I've pushed this patch for now, so we don't keep the behavioral change > in 3.12 series. > > Attachment 273715 [details] pushed as e120675 - worker: don't run shell scripts for > program sessions Thanks Ray, that indeed fixes it :-)