worker: don't run shell scripts for program sessions

GDM uses a worker to manage PAM for user sessions and
greeter sessions. For the latter case we shouldn't run
the various Pre/Post scripts, but commit
Sb48a305e71637181975fc7ec479a71079b6fbc broke that.

This commit changes the code to prevent those scripts
from getting run again.

https://bugzilla.gnome.org/show_bug.cgi?id=727703